--- a/src/app/client/access/access.component.html
+++ b/src/app/client/access/access.component.html
@@ -3,7 +3,7 @@
   <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
    
           <h3 class="text-center text-white">New Order > First Unit</h3>
-          <h4 class="text-center">Products </h4>
+          <h4 class="text-center sp">Products </h4>
 
    </div> 
 </div> 
@@ -31,10 +31,10 @@
         <p class="text-center text-danger">{{message}}</p>
     <div class="row">
         <div class="offset-2 col-8 mb-5">
-            <button type="button" class="btn btn1 btn-lg btn-block" (click)="meet('Meet agent on site')">Meet agent on site</button>
-            <button type="button" class="btn btn1 btn-lg btn-block" (click)="codeshow = !codeshow;meet('Lockbox')">Lockbox</button>
-            <button type="button" class="btn btn1 btn-lg btn-block" (click)="codeshow = !codeshow;meet('Access code')">Access Code</button>
-            <button type="button" class="btn btn1 btn-lg btn-block" (click)="meet('Others')">Other</button>
+            <button type="button" class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block " (click)="meet('Meet agent on site')">Meet agent on site</button>
+            <button type="button" class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block " (click)="codeshow = !codeshow;meet('Lockbox')">Lockbox</button>
+            <button type="button" class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block " (click)="codeshow = !codeshow;meet('Access code')">Access Code</button>
+            <button type="button" class="btn btn1 btn-lg py-sm-4 py-md-3 btn-block " (click)="meet('Others')">Other</button>
             <div *ngIf="codeshow">
                 <input type="text" placeholder="Code?" class="form-control p-4 numinput text-center my-5" name="code" id="code" [(ngModel)]="code" required>
             </div>
