--- a/src/app/client/addons/addons.component.html
+++ b/src/app/client/addons/addons.component.html
@@ -3,7 +3,7 @@
   <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
-          <h4 class="text-center">Products </h4>
+          <h4 class="text-center sp">Products </h4>
     </div>
     <div class="row">
       <div class="col-md-4 col-4 text-left">
