--- a/src/app/client/products/products.component.html
+++ b/src/app/client/products/products.component.html
@@ -21,7 +21,7 @@
 <div class="row text-center">
   <div class="offset-md-2 col-md-8 col-xs-12">
     <h3>What Products are needed at this unit?</h3>
-    <p>{{message}} <p>
+    <p>{{message}} </p>
   </div>
 </div>
 <div class="row ">
