--- a/src/app/client/visitingtime/visitingtime.component.html
+++ b/src/app/client/visitingtime/visitingtime.component.html
@@ -3,7 +3,7 @@
   <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
-          <h4 class="text-center">Pick a Time </h4>
+          <h4 class="text-center sp">Pick a Time </h4>
     </div>
     <div class="row">
           <div class="col-md-4 col-4 text-left">
@@ -18,7 +18,7 @@
      </div>
         </div>
         </div>
-        <div class="row text-center mb-3">
+        <div class="row text-center mt-3">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
             <h3>Great! Now please Pick a time slot that we have available</h3>
           </div>
