--- a/src/app/client/address/address.component.html
+++ b/src/app/client/address/address.component.html
@@ -17,7 +17,7 @@
       
     </div>
     <div class="mt-3 mb-5 offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-      <input type="text" placeholder="Street Address" class="form-control p-4 numinput text-center my-5"  formControlName="street" name="street" id="name" required >
+      <input type="text" placeholder="Street Address" class="numinput form-control p-4 text-center my-5"  formControlName="street" name="street" id="name" required >
     <p>{{addressformgroup.get('street').value}}</p>
        <!-- <div *ngIf="addressformgroup.controls['street'].haserror('required')">
          Street is required
