--- a/src/app/client/comments/comments.component.html
+++ b/src/app/client/comments/comments.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <form #commentForm="ngForm" (ngSubmit)="updateComments(commentForm)">
-  <div class="row mb-5">
+  <div class="row">
     <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
       <div class="col-md-12">
         <h3 class="text-center text-white">New Order > First Unit</h3>
