--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="row">
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-2">
-    <div class="col-md-12 p-2 ">
+  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-3">
+    <div class="col-md-12">
       <h3 class="text-center text-white">Welcome , {{auth.displayName | titlecase}}!</h3>
   
       <p class="text-center text-white">placeorder</p>
