--- a/src/app/client/placeorder/placeorder.component.html
+++ b/src/app/client/placeorder/placeorder.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="row">
-  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-2">
-    <div class="col-md-12  ">
+  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-1">
+    <div class="col-md-12">
       <h3 class="text-center text-white">Place New Order</h3>
   
       <p class="text-center text-white">Orders are itemized by property, per unit.</p>
@@ -10,7 +10,7 @@
   </div>
 </div>
 <div class="row">
-    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 mt-4">
+    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
           <div class="row  m-lg-3 m-md-5 my-5">
             <div class="col-xd col-6 ">
               <div class="mx-auto col-lg-8 col-12" routerLink="/address">
