--- a/src/app/client/visitingdate/visitingdate.component.html
+++ b/src/app/client/visitingdate/visitingdate.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-12">
         <h3 class="text-center text-white">New Order > First Unit</h3>
-        <h4 class="text-center">Pick a Date </h4>
+        <h4 class="text-center sp">Pick a Date </h4>
       </div>
     </div>
    
