review not finished

--- a/src/app/client/visitingtime/visitingtime.component.html
+++ b/src/app/client/visitingtime/visitingtime.component.html
@@ -19,8 +19,8 @@
         </div>
         </div>
         <div class="row text-center mb-3">
-          <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-            <h3>Great! Now please Pick a time slot that we have available</h3>
+          <div class="offset-md-2 col-md-8 col-xs-12 my-2">
+            <h3>Great! Now please Pick a time slot that we have available on {{visitingdatenow | date:'MMM d, y'}}</h3>
           </div>
         </div>
     <div class="row">
