--- a/src/app/client/squarefeet/squarefeet.component.html
+++ b/src/app/client/squarefeet/squarefeet.component.html
@@ -13,8 +13,8 @@
 </div>
 <div class="row text-center"> 
           <div class="offset-md-3 col-md-6 offset-sm-3 col-sm-6 col-xs-12">
-            <h3 class="my-3">How many square feet?</h3>
-            <p>{{street}}</p>
+            <h3 class="my-3">How many square feet?{{propertytype}}ccc</h3>
+           
           </div>
 </div>
 <div class="row">
