--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,6 @@ body {  font-family: 'Lato'; }
  color:#f1875b;
 }
 .numinput{
-    border: 2px solid #000;
+    border: 2px solid #000 !important;
 }
 
