--- a/src/app/client/price/price.component.html
+++ b/src/app/client/price/price.component.html
@@ -1,28 +1,7 @@
-<div class="row " style="margin-bottom:45px" >
-  <div class="col-sm-12 col-offset-2 text-center mt-5">
-    <div  (swipe)="onSwipe($event)"   >
-       
-        <i class="fa fa-angle-up mx-auto"></i>
-        <h1 class="swipe">Slide to View Price</h1>
-    </div>
-  </div>
-</div>
-
-
-<div [@slideInOut]="priceStatus" [ngStyle]="{'display':priceStatus ==='out'?'none':'block'}"class="row" id="headerback">
-    <div class="row " style="margin-bottom:45px" >
-        <div class="col-sm-12 col-offset-2 text-center">
-          <div  (swipe)="onSwipe($event)"   >
-             
-              <i class="fa fa-angle-down mx-auto"></i>
-              <h1 class="swipe">Slide down to Hide Price</h1>
-             
-          </div>
-        </div>
-      </div>
+<div class="row" id="headerback">
   
   <div class="col-md-12 text-center" id="view">
-  <span class="rounded-circle mb-4 bg-white"><img src="/assets/image/logo2.png" class="p-2"></span>
+  <span class="rounded-circle mb-4 bg-white"><img src="/assets/image/icons/" class="p-2"></span>
 </div>
 <div class="menu mb-2 bg-white border border-grey">
   <h3 class="text-center p-3  ">PRICE MENU</h3>
@@ -228,5 +207,6 @@ for mobile -->
 
 <!--Nav pills Vertical-->
 
-
 </div>
+<app-footer></app-footer>
+
