--- a/src/app/client/revieworder/revieworder.component.html
+++ b/src/app/client/revieworder/revieworder.component.html
@@ -37,7 +37,7 @@
           </div>
           <div class="row">
               <div class="col-md-6 mx-auto">
-                  <p><img class="ordericon" src="/assets/image/icons/style.png">{{zipcode}}</p>
+                  <p><img class="ordericon" src="/assets/image/icons/style.png">{{cli.zipcode}}</p>
               </div>
           </div>
           
@@ -101,4 +101,4 @@
                               <p><img class="ordericon" src="/assets/image/icons/style.png"></p>
                           </div>
                         </div>
-                      >
+                      
