--- a/src/app/client/addons/addons.component.html
+++ b/src/app/client/addons/addons.component.html
@@ -26,17 +26,17 @@
   </div>
   <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block ">Community Shots(+$50)</button>
+        <button type="button" class="btn btn1 btn-lg btn-block" >Community Shots(+$50)</button>
       </div>
   </div>
   <div class="row">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block ">Twlight Shots(+$50)</button>
+               <button type="button" class="btn btn1 btn-lg btn-block" value="50"  >Twlight Shots(+$50)</button>
           </div>
   </div>
   <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-      <button type="button" class="btn btn1 btn-lg btn-block ">Rush Fee(+$75)</button>
+           <button type="button" class="btn btn1 btn-lg btn-block"  >Rush Fee(+$75)</button>
       </div>
   </div>
   <app-footer></app-footer>
