--- a/src/app/client/visitingtime/visitingtime.component.css
+++ b/src/app/client/visitingtime/visitingtime.component.css
@@ -19,3 +19,8 @@ h5{
     background-color: #D5D5D5;
     color:#000;
 }
+.btn:focus{
+    background-color: blue;
+    color:#000;
+    box-shadow: none!important;
+}
