--- a/src/app/client/visitingtime/visitingtime.component.html
+++ b/src/app/client/visitingtime/visitingtime.component.html
@@ -25,28 +25,30 @@
         </div>
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block">10:00 AM</button>
+          <button type="button"  value="10:00" class="btn btn1 btn-sm btn-block">10:00 AM</button>
       </div>
       </div>
       <div class="row">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block ">11:00 AM</button>
+          <button type="button" id="11" value="11:00" class="btn btn1 btn-sm btn-block ">11:00 AM</button>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block ">12:00 PM</button>
+          <button type="button" id="12" value="12:00" class="btn btn1 btn-sm btn-block ">12:00 PM</button>
+            
+        </div>
+          </div>
+          <div class="row">
+              <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+          <button type="button"  value="1:00" class="btn btn1 btn-sm btn-block">1:00 PM</button>
           </div>
           </div>
           <div class="row">
               <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block">1:00 PM</button>
+          <button type="button" value="2:00" class="btn btn1 btn-sm btn-block">2:00 PM</button>
           </div>
-          </div>
-          <div class="row">
-              <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-sm btn-block">2:00 PM</button>
-          </div>
-          </div>
+        </div>
+          <button class="btn btn-primary" (click)="add()">submit</button>
       <app-footer></app-footer>
      
