--- a/src/app/client/revieworder/revieworder.component.html
+++ b/src/app/client/revieworder/revieworder.component.html
@@ -7,6 +7,7 @@
     </div>
         <div class="row">
             <div class="col-md-4 col-4 text-left">
+                    {{ message | async | json }}
                 <button type="button" class="btn3 text-white">BACK</button>
             </div>
             <div class="col-md-4 col-4 text-center">
