--- a/src/styles.css
+++ b/src/styles.css
@@ -46,4 +46,7 @@ body {  font-family: 'Lato'; }
 .numinput{
     border: 2px solid #000 !important;
 }
-
+.btn4{
+  background-color: #D5D5D5 !important;
+     color:#000 !important;
+}
