--- a/src/app/client/squarefeet/squarefeet.component.css
+++ b/src/app/client/squarefeet/squarefeet.component.css
@@ -24,3 +24,9 @@ h5{
     background-color: transparent;
     border: none;
 }
+.select{
+    background-color:#D5D5D5;
+ }
+ .unselect{
+     background-color:#F07C49;
+ }
