--- a/src/app/client/squarefeet/squarefeet.component.html
+++ b/src/app/client/squarefeet/squarefeet.component.html
@@ -20,13 +20,13 @@
 <div class="row">
         <div class="col-xs-12 my-2 py-md-2 offset-md-3 col-md-6 lg-offset-3 col-lg-6">
           
-            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="updatesqft('0-750')">0-750 SF</button>
-            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="updatesqft('751-1500')">751-1500 SF</button>
-            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="updatesqft('1501-2250')">1501-2250 SF</button>
-            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="updatesqft('2251-3000')">2251-3000 SF</button>
-            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="updatesqft('3001-3750')">3001-3750 SF</button>
-            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="updatesqft('3751-4500')">3751-4500 SF</button>
-            <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block" (click)="updatesqft('4501-5250')">4501-5250 SF </button>
+            <button  type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block"  (click)="updatesqft($event,'0-750')">0-750 SF</button>
+            <button type="button"  class="btn btn1 btn-md py-sm-4 py-md-3 btn-block"  (click)="updatesqft($event,'751-1500')">751-1500 SF</button>
+            <button type="button"  class="btn btn1 btn-md py-sm-4 py-md-3 btn-block"  (click)="updatesqft($event,'1501-2250')">1501-2250 SF</button>
+            <button type="button"  class="btn btn1 btn-md py-sm-4 py-md-3 btn-block"  (click)="updatesqft($event,'2251-3000')">2251-3000 SF</button>
+            <button type="button"  class="btn btn1 btn-md py-sm-4 py-md-3 btn-block"  (click)="updatesqft($event,'3001-3750')">3001-3750 SF</button>
+            <button type="button"  class="btn btn1 btn-md py-sm-4 py-md-3 btn-block"  (click)="updatesqft($event,'3751-4500')">3751-4500 SF</button>
+            <button type="button"  class="btn btn1 btn-md py-sm-4 py-md-3 btn-block"  (click)="updatesqft('4501-5250')">4501-5250 SF </button>
             <button type="button" class="btn btn1 btn-md py-sm-4 py-md-3 btn-block mb-5" (click)="updatesqft('5251+')">5251+ SF</button>
         </div>
       
