--- a/src/app/client/updateorder/updateorder.component.html
+++ b/src/app/client/updateorder/updateorder.component.html
@@ -7,13 +7,13 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-4 text-left">
-              <button type="button" class="btn3 text-white">BACK</button>
+              <button class="btn btn-link text-white">BACK</button>
           </div>
           <div class="col-md-4 col-4 text-center">
               <h5>Subtotal:</h5>
             </div>
           <div class="col-md-4 col-4 text-right">
-              <button type="button" class="btn3 text-white">NEXT</button>
+              <button class="btn btn-link text-white">NEXT</button>
           </div>
         </div>
     </div>
