--- a/src/app/client/navbar/navbar.component.css
+++ b/src/app/client/navbar/navbar.component.css
@@ -3,6 +3,11 @@
   top:0;
   right: 0;
 }
+.orderquery{
+  position:absolute;
+  top:21px;
+}
+
 @media screen and (max-width: 420px) {
   .pt-3{
     padding-top: 0.45!important;
