--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -35,10 +35,26 @@
           </ul>
         </div> 
         <div class="poab p-3 px-3">
-            <span matBadge="4" matBadgeColor="warn">
+          
+           
+               
+                     
                 <img src="assets/image/icons/delivery1.png" alt="delivery" class="cart ml-auto">
-            </span>
         </div> 
       </nav>
+      <div class="text-right orderquery offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+          <div *ngIf="avisosTest | async as aviso">
+              <ul style="display:none">
+                <li *ngFor="let aviso of aviso; let i = index">
+                  {{aviso}}
+                </li>
+              </ul>
+              
+                 
+                  <span matBadge={{aviso.length}} matBadgeColor="warn"></span>
+                
+          
+            </div>
+      </div>
       
       </div>
