--- a/src/app/admin/adminpending/adminpending.component.html
+++ b/src/app/admin/adminpending/adminpending.component.html
@@ -1,46 +1,197 @@
-<div id="PENDING" class="container tab-pane active">
-    <h3 class="text-center">PENDING</h3>
-      <div class="table-responsive">
-          <table class="table table-striped">
-              <thead class="thead-dark">
-                <tr>
-                    <th scope="col">No</th>
-                    <th scope="col">OrderId</th>
-                    <th scope="col">Delivery Date</th>
-                    <th scope="col">Edit/Delete</th>
-                </tr>
-                <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td></td>
-                    <td></td>
-                    <td>
-                        <button class="btn btn-primary btn-sm" (click)="query(orderid.value)" data-toggle="modal" data-target=".bd-example-modal-lg">
-                            <i class="fa fa-edit" aria-hidden="true"></i>
-                        </button>
-                        <br>
-                        <button class="btn btn-danger btn-sm my-2" (click)="delete(orderid.value)"data-toggle="modal" data-target=".bd-example-modal-lg">
-                            <i class="fa fa-trash" aria-hidden="true"></i>
-                        </button> 
-                    </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                   
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-
-                            </tr>
-                        
+<h3 class="text-center">PENDING</h3>
+<div class="example-container mat-elevation-z8">
+    <div class="example-header">
+      <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+      </mat-form-field>
+    </div>
+  
+    <table mat-table [dataSource]="dataSource" matSort>
+  
+      <!-- No Column -->
+      <ng-container matColumnDef="no">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> No </th>
+        <td mat-cell *matCellDef="let row">  </td>
+      </ng-container>
+  
+      <!-- OrderId Column -->
+      <ng-container matColumnDef="orderid">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Orderid </th>
+        <td mat-cell *matCellDef="let row">  </td>
+      </ng-container>
+  
+      
+      <!-- Deliverydate Column -->
+      <ng-container matColumnDef="deliverydate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Deliverydate </th>
+        <td mat-cell *matCellDef="let row">  </td>
+      </ng-container>
+            <!--Edit/delete-->
+      <ng-container matColumnDef="edit/delete">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Edit/Delete </th>
+        <td mat-cell *matCellDef="let row">
+          <button class="btn btn-primary btn-sm  my-2 mx-auto"data-toggle="modal" data-target="#pendingModel">  
+            <i class="fa fa-edit" aria-hidden="true"></i>
+        </button>
+        
+        <br>
+        <button class="btn btn-danger btn-sm my-2 mx-auto"
+         data-toggle="modal" data-target="#pendingModel">
+            <i class="fa fa-trash" aria-hidden="true"></i>
+        </button> 
+           </td>
+        
+      </ng-container>
+  
+  
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+      </tr>
+    </table>
+    <!--model box-->
+  <div id="pendingModel" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+              <div class="row p-2">
+                  <div class="col-4">
+                      <p>
+                          <strong>Order ID:</strong> {{(property |async)?.orderid}} 
+                         
+                            
+                      </p>
+                  </div>
+                  <div class="col-4">
+                      <p class="text-center">
+                          <strong>Ordered by:</strong>{{(property |async)?.orderedby}}
+                      </p>
+                  
+                  </div>
+                  <div class="col-4">
+                       <p class="text-right">
+                          <strong>Phone:</strong>{{(property |async)?.contact}}
+                      </p>
+                  </div>
+              </div>
+              <form class="p-2">
+                <div class="form-row mt-2">
+                    <div class="col">
+                        <label>Building</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label>SquareFeet</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="col">
+                        <label>Total</label>
+                        <input type="text" class="form-control" class="form-control">
+                    </div>
+                </div>
+                <div class="form-row mt-2">
+                    <div class="col">
+                        <label>Street</label>
+                        <input type="text" class="form-control">
+                    </div>
+    
+                    <div class="col">
+                        <div class="row">
+                            <div class="col-4">
+                                <label>City</label>
+                                <input type="text" class="form-control"> 
+                            </div>
+                            <div class="col-4">
+                                <label>Zip</label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="col-4">
+                                
+                                <div *ngIf="(property | async)?.unit===undefined; else unitshow">
+    
+                                </div>
+                                <ng-template #unitshow>
+                                    <label>Unit</label>
+                                    <input type="text" class="form-control">
+    
+    </ng-template>
+                                
+                            </div>
+                        </div>
+    
+    
+                    </div>
+                </div>
+                  <div class="form-row mt-2">
+                    <div class="col-6">
+                            <label for="orders">Orders:</label>
+                            <textarea class="form-control" rows="4" id="comment" name="text"></textarea>
+                         
+                    </div>
+                    <div class="col-6">
+                            <label for="addons">Addons:</label>
+                            <textarea class="form-control" rows="4" id="comment" name="text"></textarea>
+                         
+                    </div>
+                 </div>   
+    
+                      
+                  <div class="form-row mt-2">
+                      <div class="col">
+                          <label>Visiting Date </label>
+                          <div *ngIf ="(property | async)?.visitingdate!==undefined;">
+                              <input type="date" class="form-control">
+                          </div>
+                          
+                          
+                      </div>
+                      <div class="col">
+                          <label>Visiting Time</label>
+                          <input type="text" class="form-control">
+                         
+                      </div>
+                      <div class="col">
+                          <label>Meeting Type</label>
+                          <input type="text" class="form-control">
+                      </div>
+                      <div class="col">
+                          <label>Code</label>
+                          <input type="text" class="form-control">
+                      </div>
+                  </div>
+                  <div class="form-row mt-2">
+                      <div class="col-4">
+                          <label>Comments</label>
+                          <input type="text" class="form-control">
+                      </div>
+    
+    <div class="col-4 col-md-4">
+                          <label>Assign Agent</label>
+                          <select class="custom-select" #input>
+                              <option selected>Choose...</option>
+                              <option value="1">One</option>
+                              <option value="2">Two</option>
+                              <option value="3">Three</option>
+                          </select>
+                          </div>
+                          <div class="col-4">
+                          <form>
+                              <div class="form-group">
+                                  <label for="exampleFormControlFile1">Example file input</label>
+                                  <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                              </div>
+                          </form>
+                          </div>
+                          </div>
+                          <div class="form-row mt-2">
+                            <div class="col">
+                                <button class="btn btn-primary" type="submit">Save</button>
+                                <button class="btn btn-danger mx-3">Delete</button>
+                          </div>
+                          </div>
                     
-                    </tbody>
-                    </table>
-              </div>
-              </div>
+                          </form>
+                          </div>
+                          </div>
+                          </div>
+                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
