--- a/src/app/client/visitingdate/visitingdate.component.html
+++ b/src/app/client/visitingdate/visitingdate.component.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-md-4 col-4 text-left">
           <button type="button" class="btn btn-link text-white" [routerLink]="['/access']" routerLinkActive="router-link-active"
-            routerLinkActive="router-link-active">BACK</button>
+            skipLocationChange>BACK</button>
         </div>
         <div class="col-md-4 col-4 text-center">
           <h5>Subtotal:<span class="sp">{{orderprice}}</span></h5>
