--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -29,19 +29,45 @@
             <div class="col-xd col-6">
               <div class="position-absolute" style="right:0"></div>
               <div class="mx-auto col-lg-8 col-12" routerLink="/myorder"><img src="/assets/image/icons/p3.png" class="img-fluid" id="myorder"></div>
-          
+              <div class="text-right orderquery offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+                <div *ngIf="avisosTest | async as aviso">
+                    <ul style="display:none">
+                      <li *ngFor="let aviso of aviso; let i = index">
+                        {{aviso}}
+                      </li>
+                    </ul>
+                    
+                       
+                        <span matBadge={{aviso.length}} matBadgeColor="warn"></span>
+                      
+                
+                  </div>
+            </div>
             </div>
           </div>
           <div class="row m-lg-3 m-md-5 my-5">
             <div class=" col-xd col-6 ">
-                <div class="position-absolute px-3" style="right:0"><div class="circle">11</div></div>
+                <div class="position-absolute px-3" style="right:0"><div class=""></div></div>
                 <div class="mx-auto col-lg-8 col-12" routerLink="/myaccount"><img src="/assets/image/icons/p5.png" class="img-fluid" id="myaccount"></div>
           
             </div>
             <div class="col-xd col-6 ">
-              <div class="position-absolute px-3" style="right:0"><div class="circle">1</div></div>
+              <div class="position-absolute px-3" style="right:0"><div class=""></div></div>
               <div class="mx-auto col-lg-8 col-12" routerLink="/deliveries"><img src="/assets/image/icons/p7.png" class="img-fluid" id="delivery"></div>
-          
+              <div class="text-right orderquery offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+                <div *ngIf="avisosTest | async as aviso">
+                    <ul style="display:none">
+                      <li *ngFor="let aviso of aviso; let i = index">
+                        {{aviso}}
+                      </li>
+                    </ul>
+                    
+                       
+                        <span matBadge={{aviso.length}} matBadgeColor="warn"></span>
+                      
+                
+                  </div>
+            </div>
             </div>
     </div>  
 </div>
