--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -16,24 +16,24 @@
           <div class="row  m-lg-3 m-md-5 my-5">
             <div class="col-xd col-6 sm-p-2">
               <div class="position-absolute" style="right:0"></div>
-              <div class="mx-auto col-lg-8 col-12" routerLink="/placeorder"><img src="/assets/image/icons/p1.png" class="img-fluid" id="placeorder"></div>
+              <div class="mx-auto col-lg-8 col-12" routerLink="/placeorder" skipLocationChange><img src="/assets/image/icons/p1.png" class="img-fluid" id="placeorder"></div>
           
             </div>
             <div class="col-xd col-6">
               <div class="position-absolute" style="right:0"></div>
-              <div class="mx-auto col-lg-8 col-12" routerLink="/myorder"><img src="/assets/image/icons/p3.png" class="img-fluid" id="myorder"></div>
+              <div class="mx-auto col-lg-8 col-12" routerLink="/myorder" skipLocationChange><img src="/assets/image/icons/p3.png" class="img-fluid" id="myorder"></div>
           
             </div>
           </div>
           <div class="row m-lg-3 m-md-5 my-5">
             <div class=" col-xd col-6 ">
                 <div class="position-absolute px-3" style="right:0"><div class="circle">11</div></div>
-                <div class="mx-auto col-lg-8 col-12" routerLink="/myaccount"><img src="/assets/image/icons/p5.png" class="img-fluid" id="myaccount"></div>
+                <div class="mx-auto col-lg-8 col-12" routerLink="/myaccount" skipLocationChange><img src="/assets/image/icons/p5.png" class="img-fluid" id="myaccount"></div>
           
             </div>
             <div class="col-xd col-6 mb-5">
               <div class="position-absolute px-3" style="right:0"><div class="circle">1</div></div>
-              <div class="mx-auto col-lg-8 col-12" routerLink="/deliveries"><img src="/assets/image/icons/p7.png" class="img-fluid" id="delivery"></div>
+              <div class="mx-auto col-lg-8 col-12" routerLink="/deliveries" skipLocationChange><img src="/assets/image/icons/p7.png" class="img-fluid" id="delivery"></div>
           
             </div>
     </div>  
