--- a/src/app/client/placeorder/placeorder.component.html
+++ b/src/app/client/placeorder/placeorder.component.html
@@ -27,7 +27,7 @@
             </div>
             <div class="col-xd col-6 ">
 
-                     <div class="mx-auto col-lg-8 col-12" routerLink="/address">
+                     <div class="mx-auto col-lg-8 col-12" routerLink="/address" skipLocationChange>
                       <a (click)="upbuilding('Townhome')">
                       <img src="/assets/image/icons/pict.png" class="img-fluid" alt="Townhome">
                       </a>
@@ -37,7 +37,7 @@
           </div>
           <div class="row m-lg-3 m-md-5">
             <div class=" col-xd col-6 ">   
-              <div class="mx-auto col-lg-8 col-12" routerLink="/units">
+              <div class="mx-auto col-lg-8 col-12" routerLink="/units" skipLocationChange>
                 <a (click)="upbuilding('Appartment')">
                 <img src="/assets/image/icons/pica.png" class="img-fluid" alt="Appartment">
                 </a>
@@ -46,7 +46,7 @@
             </div>
             <div class="col-xd col-6 mb-5">
         
-              <div class="mx-auto col-lg-8 col-12" routerLink="/address">
+              <div class="mx-auto col-lg-8 col-12" routerLink="/address" skipLocationChange>
                 <a (click)="upbuilding('Commercial')">
                 <img src="/assets/image/icons/picc.png" class="img-fluid" alt="Commercial">
                 </a>
