--- a/src/app/client/thanks/thanks.component.html
+++ b/src/app/client/thanks/thanks.component.html
@@ -6,7 +6,7 @@
   <form class="col-12 mt-5 text-center">
 
     <div class="offset-md-3 col-md-6 col-xs-12">
-      <button  class="btn btn1 btn-block p-3" routerLink="/login">SIGN IN</button>
+      <button  class="btn btn1 btn-block p-3" routerLink="/login" skipLocationChange>SIGN IN</button>
     </div>
 
   </form>
