--- a/src/app/client/completeorder/completeorder.component.html
+++ b/src/app/client/completeorder/completeorder.component.html
@@ -23,22 +23,15 @@
         <div class="row text-center mb-3">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
             <p>Please check your email for confirmation and details.</p>
-            <p>Your Order (1) have been updated.</p>
+            <p><span class="text">Your Order (1)</span> have been updated.</p>
             <p>NOTE:We will contact you to confirm your order and scheduling.</p>
             <p>Thank You!</p>
           </div>
         </div>
         <div class="row">
           <div class="offset-md-3 col-md-6 col-xs-12 mt-5">
-            <div class="row">
-              <div class="offset-md-3 col-md-6 col-xs-12 mt-5 my-3">
-                  <button type="button" class="btn btn1 btn-md btn-block">BACK HOME</button>
+            <button type="button" class="btn btn2 btn-md btn-block">BACK HOME</button>
+             <button type="button" class="btn btn3 btn-md btn-block">PLACE NEW ORDER</button>
               </div>
             </div>
-            <div class="row">
-              <div class="offset-md-3 col-md-6 col-xs-12">
-                <button type="button" class="btn btn2 btn-md btn-block">PLACE NEW ORDER</button>
-              </div>
-            </div>
-            </div>
-            </div>
+            
