--- a/src/app/client/profile/profile.component.html
+++ b/src/app/client/profile/profile.component.html
@@ -7,13 +7,13 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav mx-auto my-2 nav-fill w-75">
             <li class="nav-item ">
-                <a class="nav-link" routerLink="/main">Main</a>
+                <a class="nav-link" routerLink="/main" skipLocationChange>Main</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" routerLink="/">Price Menu</a>
+                <a class="nav-link" routerLink="/" skipLocationChange>Price Menu</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" routerLink="/placeorder">Place Order</a>
+                <a class="nav-link" routerLink="/placeorder" skipLocationChange>Place Order</a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link ">My Orders</a>
