--- a/src/app/client/revieworder/revieworder.component.html
+++ b/src/app/client/revieworder/revieworder.component.html
@@ -7,7 +7,7 @@
     </div>
         <div class="row">
             <div class="col-md-4 col-4 text-left">
-                <button type="button" class="btn btn-link text-white" [routerLink]="['/comments']" routerLinkActive="router-link-active" >BACK</button>
+                <button type="button" class="btn btn-link text-white" [routerLink]="['/comments']" routerLinkActive="router-link-active" skipLocationChange>BACK</button>
             </div>
             <div class="col-md-4 col-4 text-center">
                 <h5>Subtotal:<span class="sp">${{orderprice}}</span></h5>
@@ -31,10 +31,10 @@
             
                <ul>
                     
-                   <li><a [routerLink]="['/placeorder']" routerLinkActive="router-link-active" >{{propertytype}}</a></li>
-                   <li><a [routerLink]="['/squarefeet']" routerLinkActive="router-link-active" >{{squarefeet}}</a></li>
-                   <li><a [routerLink]="['/address']" routerLinkActive="router-link-active" ><span class="ml-2 pl-1">{{street}}</span><br><span class="ml-5">{{city}}</span><br><span class="ml-5">{{zip}}<br></span><span *ngIf="appartmentunitno !='no unit'">{{appartmentunitno}}</span></a></li>  
-                   <li><a [routerLink]="['/products']" routerLinkActive="router-link-active" ><span><b>Products</b></span><ng-container *ngFor="let hero of orderarray;let i=index;">
+                   <li><a [routerLink]="['/placeorder']" routerLinkActive="router-link-active" skipLocationChange>{{propertytype}}</a></li>
+                   <li><a [routerLink]="['/squarefeet']" routerLinkActive="router-link-active" skipLocationChange>{{squarefeet}}</a></li>
+                   <li><a [routerLink]="['/address']" routerLinkActive="router-link-active" skipLocationChange><span class="ml-2 pl-1">{{street}}</span><br><span class="ml-5">{{city}}</span><br><span class="ml-5">{{zip}}<br></span><span *ngIf="appartmentunitno !='no unit'">{{appartmentunitno}}</span></a></li>  
+                   <li><a [routerLink]="['/products']" routerLinkActive="router-link-active" skipLocationChange><span><b>Products</b></span><ng-container *ngFor="let hero of orderarray;let i=index;">
                     <p class="ml-4 pl-2">{{hero}}</p>
                     <ng-container *ngFor="let heroine of hero;let j=index;">
                      
@@ -42,7 +42,7 @@
                    </ng-container></a>
                   </li>
                 
-                  <li *ngIf="ispaddonarray"><a [routerLink]="['/addons']" routerLinkActive="router-link-active"><span><b>Photography Addons</b></span>
+                  <li *ngIf="ispaddonarray"><a [routerLink]="['/addons']" routerLinkActive="router-link-active" skipLocationChange><span><b>Photography Addons</b></span>
                       <ng-container *ngFor="let hero of paddonarray;let i=index;">
                         <p class="ml-4 pl-2">{{hero}}</p>
                         <ng-container *ngFor="let heroine of hero;let j=index;">
@@ -51,7 +51,7 @@
                       </ng-container>
                     </a>
                   </li>
-                  <li *ngIf="isvaddonarray"><a [routerLink]="['/addonsv']" routerLinkActive="router-link-active"><span><b>Video Addons</b></span>
+                  <li *ngIf="isvaddonarray"><a [routerLink]="['/addonsv']" routerLinkActive="router-link-active" skipLocationChange><span><b>Video Addons</b></span>
                       <ng-container *ngFor="let hero of vaddonarray;let i=index;">
                         <p class="ml-4 pl-2">{{hero}}</p>
                         <ng-container *ngFor="let heroine of hero;let j=index;">
@@ -60,12 +60,12 @@
                       </ng-container>
                     </a>
                   </li>
-                   <li><a [routerLink]="['/access']" routerLinkActive="router-link-active" >{{accessproperty}}</a></li>
-                   <li *ngIf="accesspropertycode!='No Code'"><a [routerLink]="['/access']" routerLinkActive="router-link-active" >{{accesspropertycode}}</a></li>
-                   <li><a [routerLink]="['/visitingdate']" routerLinkActive="router-link-active">{{visitingdatenow | date: 'medium' }}</a></li>
-                   <li *ngIf="comment != ''"><a [routerLink]="['/comment']" routerLinkActive="router-link-active" >{{comment}}</a></li>
-               </ul>sdsdsdsd
-                <button class="btn btn1 btn-block mx-auto py-4" (click)="submitorder()" >ADD TO CART</button>
+                   <li><a [routerLink]="['/access']" routerLinkActive="router-link-active" skipLocationChange>{{accessproperty}}</a></li>
+                   <li *ngIf="accesspropertycode!='No Code'"><a [routerLink]="['/access']" routerLinkActive="router-link-active" skipLocationChange>{{accesspropertycode}}</a></li>
+                   <li><a [routerLink]="['/visitingdate']" routerLinkActive="router-link-active" skipLocationChange>{{visitingdatenow | date: 'medium' }}</a></li>
+                   <li *ngIf="comment != ''"><a [routerLink]="['/comment']" routerLinkActive="router-link-active" skipLocationChange>{{comment}}</a></li>
+               </ul>
+                <button class="btn btn2 btn-block mx-auto mb-5 p-2" (click)="submitorder()" >ADD TO CART</button>
           </div>
         </div>
 
