--- a/src/app/client/updateorder/updateorder.component.html
+++ b/src/app/client/updateorder/updateorder.component.html
@@ -7,14 +7,14 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-4 text-left">
-              <button type="button" class="btn3 text-white">BACK</button>
+              <button type="button" class="btn btn-link text-white">BACK</button>
           </div>
           <div class="col-md-4 col-4 text-center">
               <h5>Subtotal:</h5>
             </div>
-          <div class="col-md-4 col-4 text-right">
+          <!-- <div class="col-md-4 col-4 text-right">
               <button type="button" class="btn3 text-white">NEXT</button>
-          </div>
+          </div> -->
         </div>
     </div>
 </div>
@@ -26,7 +26,7 @@
 </div>
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 mt-5 my-3">
-          <button type="button" class="btn btn1 btn-md btn-block">ADD ANOTHER UNIT</button>
-          <button type="button" class="btn btn2 btn-md btn-block">SUBMIT ORDER</button>
+          <button type="button" class="btn btn2 btn-md btn-block">ADD ANOTHER UNIT</button>
+          <button type="button" class="btn btn3 btn-md btn-block">SUBMIT ORDER</button>
       </div>
     </div>
