--- a/src/app/client/revieworder/revieworder.component.html
+++ b/src/app/client/revieworder/revieworder.component.html
@@ -34,12 +34,10 @@
                    <li><a [routerLink]="['/placeorder']" routerLinkActive="router-link-active" >{{propertytype}}</a></li>
                    <li><a [routerLink]="['/squarefeet']" routerLinkActive="router-link-active" >{{squarefeet}}</a></li>
                    <li><a [routerLink]="['/address']" routerLinkActive="router-link-active" ><span class="ml-2 pl-1">{{street}}</span><br><span class="ml-5">{{city}}</span><br><span class="ml-5">{{zip}}<br></span><span *ngIf="appartmentunitno !='no unit'">{{appartmentunitno}}</span></a></li>  
-                   <li><a [routerLink]="['/products']" routerLinkActive="router-link-active" ><span><b>Products</b></span><ng-container *ngFor="let hero of orderarray;let i=index;">
-                    <p class="ml-4 pl-2">{{hero}}</p>
-                    <ng-container *ngFor="let heroine of hero;let j=index;">
-                     
-                    </ng-container>
-                   </ng-container></a>
+                   <li><a [routerLink]="['/products']" routerLinkActive="router-link-active" ><span><b>Products</b></span><ul *ngFor="let hero of ordersuarray;let i=index;">
+                    <li class="ml-4 pl-2">{{hero}}</li>
+                    
+                   </ul></a>
                   </li>
                 
                   <li *ngIf="ispaddonarray"><a [routerLink]="['/addons']" routerLinkActive="router-link-active"><span><b>Photography Addons</b></span>
