--- a/src/app/client/myorder/myorder.component.html
+++ b/src/app/client/myorder/myorder.component.html
@@ -1,22 +1,22 @@
 <app-navbar></app-navbar>
 <div class="row">
-  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+  <div class="bgdark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
     <div class="col-md-12 text-center text-white p-2">
           <h3>New Order</h3>
-          <h4>Today is February 14, 2018</h4>
-          <p>1 appoinment scheduled for today.</p>
+          <h4>Today is {{today | date: 'longDate'}}</h4>
+          <p>{{message}}</p>
     </div>
   </div>
 </div>
 <div class="row">
     <div class="offset-md-3 col-md-6 col-xs-12 text-center">
-        <button type="button" class="btn btn5 btn-md">PLACE NEW ORDER</button>
+        <button type="button" class="btn btn5 btn-md" [routerLink]="['/placeorder']" routerLinkActive="router-link-active" skipLocationChange >PLACE NEW ORDER</button>
     </div>
 </div>        
 <div class="row">
     <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
        <div class="col-md-3 col-9 mx-auto mt-4">
-          <ul class="nav nav-pills" role="tablist">
+          <ul class="nav nav-pills nav-justified" role="tablist">
               <li class="nav-item">
                 <a class="nav-link active" data-toggle="pill" href="#Schedule" role="tab">Schedule</a>
               </li>
@@ -27,52 +27,37 @@
        </div>
           <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active mt-3" id="Schedule" role="tabpanel">
-              <div class="row bgcolor mt-3">
+              <div class="row  mt-3">
                   <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-                      <div class="d-flex justify-content-start">
-                    <div class="row">
-                      <div class="col-md-4 col-4 mt-3">
-                        <h2>{{Order.visitingdate.toDate()| date }}</h2> 
-                      </div>  
-                      <div class="col-md-8 col-8 mt-3">
-                        <h6>10.30 AM <span class="vl"></span> 42 pinetree   Lane</h6>
-                        <p>2 units</p>
-                      </div>
-                    </div>
+                    <ul class="list-group" *ngFor="let datas of datacom |async;let i= index;">
+                      <li class="my-2 px-5 border border-dark list-group-item">
+                        <div class="row my-2">
+                          <div class="col-3 p-2">
+                            <h3 class="py-1">{{datas.visitingdate.toDate() |date:'M/d'}}</h3>
+                          </div>
+                          <div class="col-6">
+                            <p class="over">{{datas.address.street}}</p>
+                            <p>1 unit | {{datas.visitingdate.toDate() |date:'shortTime'}}</p>
+                    
+                          </div>
+                          <div class="col-3">
+                    
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
+                   
                   </div>
               </div>
               </div>
-              <div class="d-flex bd-highlight">
-                  <div class="mt-3 flex-fill bd-highlight"> <h3>24</h3></div>
-                  <div class="mt-3 flex-fill bd-highlight"><h5>123 Florida Ave</h5>
-                    <p>1 unit <span class="vl"></span> 2.30 pm</p></div>
-                  <div class="flex-shrink-1 bd-highlight"><button type="button" class="btn-secondary btn-lg p-4">Edit</button></div>
-                </div>
-                <ul>
-                    <li>
-                <div class="mt-4 d-flex bd-highlight">
-                    <div class="p-1 flex-fill bd-highlight"> <h2>2/22</h2></div>
-                    <div class="p-1 flex-fill bd-highlight"> <h5>374 Connective ave</h5>
-                      <p>1 unit <span class="vl"></span>complete</p>
-                  </div>
-                    <div class="flex-shrink-1 bd-highlight"> <img src="/assets/image/icons/Download1.png"></div>
-                </div>
-                </li>
-                <li>
-                <div class="d-flex bd-highlight">
-                  <div class="p-1 flex-fill bd-highlight"> <h2>2/22</h2></div>
-                    <div class="p-1 flex-fill bd-highlight"> <h5>374 Connective ave</h5>
-                      <p>1 unit <span class="vl"></span>complete</p>
-                  </div>
-                    <div class="flex-shrink-1 bd-highlight"> <img src="/assets/image/icons/Download1.png"></div>
-                 </div>
-                </li>
-                 
-                  </ul>
-              
-         </div>
+            
+                
             <div class="tab-pane fade" id="Calendar" role="tabpanel">hello</div>
+         </div>
+            
           </div>
+        
+         
   </div>
            
        
