--- a/src/app/client/completeorder/completeorder.component.html
+++ b/src/app/client/completeorder/completeorder.component.html
@@ -4,17 +4,10 @@
     <div class="col-md-12">
           <h3 class="text-center text-white">New Order > First Unit</h3>
           <h4 class="text-center">Order Complete </h4>
-        </div>
-        <div class="row">
-          <div class="col-md-4 col-4 text-left">
-              <h5 class="text-white">BACK</h5>
-          </div>
-          <div class="col-md-4 col-4 text-center">
-              <h5>Subtotal:</h5>
-            </div>
-        </div>
-        </div>
-        </div>
+    </div>
+       
+  </div>
+</div>
         <div class="row text-center mb-3">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
             <h2>You have Placed Your Order!</h2>
@@ -30,8 +23,8 @@
         </div>
         <div class="row">
           <div class="offset-md-3 col-md-6 col-xs-12 mt-5">
-            <button type="button" class="btn btn2 btn-md btn-block">BACK HOME</button>
-             <button type="button" class="btn btn3 btn-md btn-block">PLACE NEW ORDER</button>
+            <button type="button" class="btn btn2 btn-md btn-block py-3" [routerLink]="['/main']" routerLinkActive="router-link-active" skipLocationChange>BACK HOME</button>
+             <button type="button" class="btn btn3 btn-md btn-block py-3" [routerLink]="['/placeorder']" routerLinkActive="router-link-active" skipLocationChange>PLACE NEW ORDER</button>
               </div>
             </div>
             
