--- a/src/app/client/myorder/myorder.component.css
+++ b/src/app/client/myorder/myorder.component.css
@@ -1,19 +1,19 @@
-.btn5{
+ .btn5{
     background-color:#F1875B;
     color:#fff;
     margin-top: -1rem;
     border-radius: 20px;
-}
+} 
 .btn6{
     border-radius: 20px;
 }
 .bgcolor{
     background-color: #77C16C;
 }
-.vl {
+/* .vl {
         border-left: 2px solid black;
         height: 10px;
-    }
+    } */
 .nav-pills,.nav-link{
 background-color: #ACACAC;
 color: #EBEBEB;
@@ -22,5 +22,5 @@ border-radius: 20px;
 .nav-link.active{
     background-color: #EBEBEB;
     color: #000;
-    border-radius: 20px;
-}
+   
+} 
