--- a/src/app/client/invoice/invoice.component.html
+++ b/src/app/client/invoice/invoice.component.html
@@ -14,17 +14,26 @@
        </div>
 </div>
 </div>
-<div class="row">
-        <div class="col-md-4 col-4">
-            <p class="text-center my-3">jan 5</p>
-        </div>
-        <div class="col-md-4 col-4">
-            <p class="text-center my-3">jun 6</p>
-          </div>
-        <div class="col-md-4 col-4">
-            <p class="text-center my-3">sep 9</p>
-        </div>
-    </div>    
+ 
+    <div class="col-md-8 mx-auto">
+       
+         <div class="row mt-5">
+                <div class="col-md-4 col-4 tr">
+                        <img src="assets/image/icons/invoice.jpg" class="tr"> 
+                        <p class="text-center my-3">Oct 9</p>
+                </div>
+                <div class="col-md-4 col-4 ">
+                        <img src="assets/image/icons/invoice.jpg"class="tr">
+                        <p class="text-center my-3">Oct-2</p>
+                </div>
+                <div class="col-md-4 col-4 tr">
+                        <img src="assets/image/icons/invoice.jpg" class="tr">
+                        <p class="text-center my-3">Oct 1</p>
+                </div>   
+         </div>
+        
+    </div>
+
 <div class="row my-5">
         <div class="offset-md-3 col-md-6 col-xs-12 my-5">
         <button type="button" class="btn btn-lg btn-block my-5">Download</button>
