--- a/src/app/client/myorder/myorder.component.css
+++ b/src/app/client/myorder/myorder.component.css
@@ -24,3 +24,66 @@ border-radius: 20px;
     color: #000;
     border-radius: 20px;
 }
+.btn-sm {
+    padding: 0.5rem 1.6rem;
+    font-size: 0.64rem;
+    widows: 52px ;
+  }
+  .example-container {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      min-width: 300px;
+    }
+    
+    .example-header {
+      min-height: 64px;
+      padding: 8px 24px 0;
+    }
+    
+    .mat-form-field {
+      font-size: 14px;
+      width: 100%;
+    }
+    
+    .mat-table {
+      overflow: auto;
+      padding:6px; 
+    }
+    
+    .mat-accent {
+      margin-bottom: 10px;
+    }
+    
+    @keyframes fadeIt {
+      0% {
+        background-color: #FFFFFF;
+      }
+      50% {
+        background-color: #98FB98;
+      }
+      100% {
+        background-color: #FFFFFF;
+      }
+    }
+    .animate {
+      background-image: none !important;
+    }
+  .modal-content{
+      background-image: url('/assets/image/background/desktop/desktop1.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      min-height: 85vh;
+      
+    }  a
+    ul {
+      list-style-type: none ;
+      padding:0;
+      }
+      .space{
+        margin-left:0.12rem !important;
+      }
