--- a/src/app/client/myorder/myorder.component.html
+++ b/src/app/client/myorder/myorder.component.html
@@ -15,7 +15,7 @@
 </div>        
 <div class="row">
     <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-       <div class="col-md-3 col-9 mx-auto mt-4">
+       <div class="col-md-5 col-6 mx-auto mt-4">
           <ul class="nav nav-pills" role="tablist">
               <li class="nav-item">
                 <a class="nav-link active" data-toggle="pill" href="#Schedule" role="tab">Schedule</a>
@@ -27,52 +27,30 @@
        </div>
           <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active mt-3" id="Schedule" role="tabpanel">
-              <div class="row bgcolor mt-3">
-                  <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-                      <div class="d-flex justify-content-start">
-                    <div class="row">
-                      <div class="col-md-4 col-4 mt-3">
-                        <h2>{{Order.visitingdate.toDate()| date }}</h2> 
-                      </div>  
-                      <div class="col-md-8 col-8 mt-3">
-                        <h6>10.30 AM <span class="vl"></span> 42 pinetree   Lane</h6>
-                        <p>2 units</p>
-                      </div>
-                    </div>
-                  </div>
+              <div class="example-container mat-elevation-z0">
+              
+                <table mat-table [dataSource]="dataSource" >
+              
+                  <ng-container matColumnDef="date/time">
+                    <th mat-header-cell *matHeaderCellDef > Date/Time </th>
+                    <td mat-cell *matCellDef="let orders">{{orders.visitingdate.toDate()| date:'M/d'}}  </td>
+                  </ng-container>
+                  <!-- Address Column -->
+                  <ng-container matColumnDef="address">
+                    <th mat-header-cell *matHeaderCellDef > Address </th>
+                    <td mat-cell *matCellDef="let orders">{{orders.address.street}},{{orders.address.city}}<br>{{orders.address.unit}} | {{orders.visitingdate.toDate()| date:'shortTime'}}  </td>
+                  </ng-container>
+                  <ng-container matColumnDef="icon">
+                    <th mat-header-cell *matHeaderCellDef > Address </th>a
+                    <td mat-cell *matCellDef="let orders"><img src="assets/image/icons/Download1.png"></td>
+                  </ng-container>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+                  </tr>
+                </table>
+        
               </div>
-              </div>
-              <div class="d-flex bd-highlight">
-                  <div class="mt-3 flex-fill bd-highlight"> <h3>24</h3></div>
-                  <div class="mt-3 flex-fill bd-highlight"><h5>123 Florida Ave</h5>
-                    <p>1 unit <span class="vl"></span> 2.30 pm</p></div>
-                  <div class="flex-shrink-1 bd-highlight"><button type="button" class="btn-secondary btn-lg p-4">Edit</button></div>
-                </div>
-                <ul>
-                    <li>
-                <div class="mt-4 d-flex bd-highlight">
-                    <div class="p-1 flex-fill bd-highlight"> <h2>2/22</h2></div>
-                    <div class="p-1 flex-fill bd-highlight"> <h5>374 Connective ave</h5>
-                      <p>1 unit <span class="vl"></span>complete</p>
-                  </div>
-                    <div class="flex-shrink-1 bd-highlight"> <img src="/assets/image/icons/Download1.png"></div>
-                </div>
-                </li>
-                <li>
-                <div class="d-flex bd-highlight">
-                  <div class="p-1 flex-fill bd-highlight"> <h2>2/22</h2></div>
-                    <div class="p-1 flex-fill bd-highlight"> <h5>374 Connective ave</h5>
-                      <p>1 unit <span class="vl"></span>complete</p>
-                  </div>
-                    <div class="flex-shrink-1 bd-highlight"> <img src="/assets/image/icons/Download1.png"></div>
-                 </div>
-                </li>
-                 
-                  </ul>
               
          </div>
             <div class="tab-pane fade" id="Calendar" role="tabpanel">hello</div>
           </div>
   </div>
-           
-       
