--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -31,7 +31,7 @@
                 <div class="form-group row">
                         <div class="col-12 my-2">
 
-                                <button type="submit" class="btn btn1 btn-block mx-auto py-4" [disabled]="!loginform.valid"
+                                <button type="submit" class="btn btn1 btn-block mx-auto py-4" 
                                         >SIGN IN</button>
 
                         </div>
