--- a/src/app/client/invoice/invoice.component.css
+++ b/src/app/client/invoice/invoice.component.css
@@ -7,3 +7,16 @@
     color:#fff;
     border-radius: 20px;
 }
+.bg-dark{
+    background-color: #636363 !important;
+}
+img.tr {
+    width: 19vw;
+    height: 31vw;
+}
+@media screen and (min-width:768){
+    img.tr {
+        width: 24vw;
+        height: 43vw;
+    }
+}
