--- a/src/app/client/editprofile/editprofile.component.html
+++ b/src/app/client/editprofile/editprofile.component.html
@@ -56,7 +56,7 @@
        <i class="fa fa-edit custom-edit"></i>
     </label>
   
-    <input id="file-input" type="file" (change)="upload($event)"  name="file-input" accept=".png,.jpg">
+    <input id="file-input" type="file" multiple (change)="upload($event)"  name="file-input" accept=".png,.jpg" >
     
   
 </div>
