--- a/src/app/client/invoice/invoice.component.css
+++ b/src/app/client/invoice/invoice.component.css
@@ -10,3 +10,13 @@
 .bg-dark{
     background-color: #636363 !important;
 }
+img.tr {
+    width: 19vw;
+    height: 31vw;
+}
+@media screen and (min-width:768){
+    img.tr {
+        width: 24vw;
+        height: 43vw;
+    }
+}
